[gd_scene load_steps=6 format=2]

[ext_resource path="res://data/elements/player/player_black.png" type="Texture" id=1]
[ext_resource path="res://data/elements/player/player_white.png" type="Texture" id=2]
[ext_resource path="res://data/elements/player/player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 60 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 70 )

[node name="Player" type="KinematicBody2D" groups=["duality", "player"]]
collision_layer = 512
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
z_index = 1
shape = SubResource( 1 )

[node name="PlayerBlack" type="Sprite" parent="." groups=["black"]]
texture = ExtResource( 1 )

[node name="PlayerWhite" type="Sprite" parent="." groups=["white"]]
texture = ExtResource( 2 )

[node name="InteractSensor" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractSensor"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[connection signal="area_entered" from="InteractSensor" to="." method="_on_InteractSensor_area_entered"]
[connection signal="area_exited" from="InteractSensor" to="." method="_on_InteractSensor_area_exited"]
[connection signal="body_entered" from="InteractSensor" to="." method="_on_InteractSensor_body_entered"]
[connection signal="body_exited" from="InteractSensor" to="." method="_on_InteractSensor_body_exited"]
